update gete problem from remote

--- a/server.html
+++ b/server.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div>
+    <p style="font-family:Times New Roman,Georgia,Serif; font-size: 20px;font-weight: bold">
+
+    </p>
     <form>
         remote_oj:
         <input id="remote_oj" type="text" name="remote_oj" value="POJ">
